Updates to LitRenderer column references

--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,10 @@ target
 tsconfig.json
 types.d.ts
 webpack*
-package.json
+package*.json
 pnpm*
 node_modules/
 vaadin.ts
 .npmrc
 frontend/
+vite.*
