--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,9 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<commons-lang3.version>3.13.0</commons-lang3.version>
+    	<jackson.version>2.15.2</jackson.version>
+    	<mockito.version>5.5.0</mockito.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
@@ -83,12 +86,10 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.15.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.15.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
