Add dependency on ApexCharts Flow library
* Enhance the dependency frequency view to include a donut chart

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,9 @@ management:
     git:
       mode: full
 
+vaadin:
+  whitelisted-packages: com.vaadin,org.vaadin,com.github.appreciated.apexcharts
+
 cron:
   # each :30 on the hour
   collection: "0 30 * * * *"
