--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,11 @@
 			<artifactId>a-vaadin-helper</artifactId>
 			<version>1.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.appreciated</groupId>
+			<artifactId>apexcharts</artifactId>
+			<version>24.0.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.projectreactor</groupId>
