--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<commons-lang3.version>3.14.0</commons-lang3.version>
-		<jackson.version>2.16.1</jackson.version>
+		<jackson-bom.version>2.16.1</jackson-bom.version>
 		<logback.version>1.4.14</logback.version>
 		<mockito.version>5.10.0</mockito.version>
 		<snakeyaml.version>2.2</snakeyaml.version>
@@ -189,7 +189,7 @@
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.25.2</version>
+			<version>3.25.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -617,7 +617,7 @@
 			<plugin>
 				<groupId>com.github.spotbugs</groupId>
 				<artifactId>spotbugs-maven-plugin</artifactId>
-				<version>4.8.3.0</version>
+				<version>4.8.3.1</version>
 				<configuration>
 					<xmlOutput>true</xmlOutput>
 				</configuration>
@@ -735,7 +735,7 @@
 				<dependency>
 					<groupId>com.wavefront</groupId>
 					<artifactId>wavefront-spring-boot-starter</artifactId>
-					<version>3.0.2</version>
+					<version>3.2.0</version>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -746,7 +746,7 @@
 			<plugin>
 				<groupId>com.github.spotbugs</groupId>
 				<artifactId>spotbugs-maven-plugin</artifactId>
-				<version>4.8.3.0</version>
+				<version>4.8.3.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
