--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,17 @@ eureka:
       defaultZone: ${vcap.services.hooverRegistry.credentials.uri:http://localhost:8761}/eureka/
 
 management:
+  info:
+    build:
+      enabled: true
+    env:
+      enabled: true
+    git:
+      mode: full
+    java:
+      enabled: true
+    os:
+      enabled: true
   endpoints:
     web:
       exposure:
@@ -23,9 +34,6 @@ management:
   endpoint:
     health:
       show-details: always
-  info:
-    git:
-      mode: full
 
 vaadin:
   whitelisted-packages: com.vaadin,org.vaadin,com.github.appreciated.apexcharts
