--- a/pom.xml
+++ b/pom.xml
@@ -295,6 +295,23 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
+		    <plugin>
+				<groupId>org.cyclonedx</groupId>
+				<artifactId>cyclonedx-maven-plugin</artifactId>
+				<version>2.7.11</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+						<goal>makeAggregateBom</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<outputFormat>json</outputFormat>
+					<outputName>classes/bom</outputName>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok-maven-plugin</artifactId>
