--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,8 @@ management:
   info:
     build:
       enabled: true
+    dependencies:
+      enabled: true
     env:
       enabled: true
     git:
@@ -26,6 +28,8 @@ management:
     java:
       enabled: true
     os:
+      enabled: true
+    sbom:
       enabled: true
   endpoints:
     web:
