Upgrade to Spring Boot 3.3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
     loadbalancer:
       ribbon:
         enabled: false
+  threads:
+    virtual:
+      enabled: true
 
 eureka:
   client:
@@ -34,7 +37,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,httptrace,loggers,metrics,prometheus
+        include: health,info,httptrace,loggers,metrics,prometheus,sbom
   endpoint:
     health:
       show-details: always
@@ -54,6 +57,9 @@ spring:
 
   cloud:
     discovery:
+      enabled: true
+  threads:
+    virtual:
       enabled: true
 
 management:
