--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.4</version>
+		<version>3.5.3</version>
 		<relativePath/>
 		<!-- lookup parent from repository -->
 	</parent>
@@ -71,7 +71,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<vaadin.version>24.7.1</vaadin.version>
+		<maven.compiler.proc>full</maven.compiler.proc>
+		<vaadin.version>24.8.0</vaadin.version>
 	</properties>
 
 	<dependencies>
@@ -109,7 +110,7 @@
 		<dependency>
 			<groupId>com.cedarsoftware</groupId>
 			<artifactId>json-io</artifactId>
-			<version>4.52.0</version>
+			<version>4.56.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -149,7 +150,7 @@
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk18on</artifactId>
-			<version>1.80</version>
+			<version>1.81</version>
 		</dependency>
 		<dependency>
 			<groupId>io.pivotal.spring.cloud</groupId>
@@ -208,7 +209,7 @@
 		<dependency>
 			<groupId>org.pitest</groupId>
 			<artifactId>pitest-junit5-plugin</artifactId>
-			<version>1.2.2</version>
+			<version>1.2.3</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -218,14 +219,14 @@
 			<dependency>
 				<groupId>io.pivotal.spring.cloud</groupId>
 				<artifactId>spring-cloud-services-dependencies</artifactId>
-				<version>4.2.0</version>
+				<version>4.3.0</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>2024.0.1</version>
+				<version>2025.0.0</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
@@ -241,21 +242,6 @@
 
 	<repositories>
 		<repository>
-			<id>spring-release</id>
-			<name>Spring Release</name>
-			<url>https://repo.spring.io/release</url>
-		</repository>
-		<repository>
-			<id>spring-milestone</id>
-			<name>Spring milestone</name>
-			<url>https://repo.spring.io/milestone</url>
-		</repository>
-		<repository>
-			<id>spring-snapshots</id>
-			<name>Spring snapshots</name>
-			<url>https://repo.spring.io/snapshot</url>
-		</repository>
-		<repository>
 			<id>Vaadin Directory</id>
 			<url>https://maven.vaadin.com/vaadin-addons</url>
 			<snapshots>
@@ -263,24 +249,6 @@
 			</snapshots>
 		</repository>
 	</repositories>
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-release</id>
-			<name>Spring Release</name>
-			<url>https://repo.spring.io/plugins-release</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>spring-milestone</id>
-			<name>Spring milestone</name>
-			<url>https://repo.spring.io/plugins-milestone</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>spring-snapshots</id>
-			<name>Spring snapshots</name>
-			<url>https://repo.spring.io/plugins-snapshot</url>
-		</pluginRepository>
-	</pluginRepositories>
 
 	<build>
 		<pluginManagement>
@@ -454,7 +422,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.12</version>
+				<version>0.8.13</version>
 				<executions>
 					<execution>
 						<id>before-unit-test-execution</id>
@@ -614,7 +582,7 @@
 			<plugin>
 				<groupId>com.github.spotbugs</groupId>
 				<artifactId>spotbugs-maven-plugin</artifactId>
-				<version>4.9.3.0</version>
+				<version>4.9.3.1</version>
 				<configuration>
 					<xmlOutput>true</xmlOutput>
 				</configuration>
@@ -622,7 +590,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
-				<version>3.26.0</version>
+				<version>3.27.0</version>
 				<configuration>
 					<includeTests>true</includeTests>
 					<failOnViolation>false</failOnViolation>
@@ -748,7 +716,7 @@
 				<dependency>
 					<groupId>org.cftoolsuite.actuator</groupId>
 					<artifactId>spring-boot-starter-runtime-metadata</artifactId>
-					<version>0.6.0</version>
+					<version>0.7.0</version>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -759,7 +727,7 @@
 				<dependency>
 					<groupId>com.wavefront</groupId>
 					<artifactId>wavefront-spring-boot-starter</artifactId>
-					<version>3.3.0</version>
+					<version>3.2.0</version>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -770,7 +738,7 @@
 			<plugin>
 				<groupId>com.github.spotbugs</groupId>
 				<artifactId>spotbugs-maven-plugin</artifactId>
-				<version>4.9.3.0</version>
+				<version>4.9.3.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
